@@ -207,7 +207,7 @@ public:
 	 */
 	void add_overlay(const map_location& loc, const std::string& image,
 		const std::string& halo="", const std::string& team_name="",
-		const std::string& fogged="yes");
+		bool visible_under_fog = true);
 
 	/** remove_overlay will remove all overlays on a tile. */
 	void remove_overlay(const map_location& loc);
